Added videos and article links

--- a/home.html
+++ b/home.html
@@ -34,7 +34,12 @@
             <li><a href="#algo">Algorithm</a></li>
         </ul>
         <p> Although we will insert code snippets in all sections belowm if you wish to have a high level overview of how the
-                genetic blackjack algorithm we implemented works, visit our <a href="https://www.github.com/PhilipPfeffer/geneticblackjack">GitHub</a>!</p>
+                genetic blackjack algorithm we implemented works, visit our <a href="https://www.github.com/PhilipPfeffer/geneticblackjack">GitHub</a>!
+            <br><br> We also highly recommend watching this <a href="https://youtu.be/K-wIZuAA3EY?t=410">video</a> (especially 6:50 to about minute ~10).
+            Here's a good medium post to familiarise yourself with the concepts if you aren't satisfied with our definitely much better
+            explanations below: <a href="https://towardsdatascience.com/introduction-to-genetic-algorithms-including-example-code-e396e98d8bf3">one</a> and 
+            <a href="https://towardsdatascience.com/introduction-to-genetic-algorithms-including-example-code-e396e98d8bf3">two</a>. 
+            </p>
         <a name="chromosomes"></a>
         <h3>Chromosomes</h3>
         <p>A chromosome is a single member of the population. In natural terms, think of this as a single lion, tiger or bear. Oh my!
@@ -363,6 +368,9 @@ def table(deck, players):
             A. Colorni, M. Dorigo et V. Maniezzo, Distributed Optimization by Ant Colonies, actes de la première conférence européenne sur 
             la vie artificielle, Paris, France, Elsevier Publishing, 134-142, 1991.
             <br><br>
+            <a href="https://towardsdatascience.com/introduction-to-genetic-algorithms-including-example-code-e396e98d8bf3">Medium Article, link copied on Tue Dec 10, 2019</a>
+            <br><br>
+            <a href="https://towardsdatascience.com/introduction-to-genetic-algorithms-including-example-code-e396e98d8bf3">Medium Article, link copied on Tue Dec 10, 2019</a>
         </cite>
     </body>
     </html>
